--- a/.github/workflows/release-windows.yaml
+++ b/.github/workflows/release-windows.yaml
@@ -38,7 +38,7 @@ jobs:
           # NOTE: keep in sync with goreleaser version in other job.
           # github actions don't allow yaml anchors.
           version: "2.3.2"
-          args: "release --clean --config=.goreleaser.windows.yml"
+          args: "release --clean --verbose --config=.goreleaser.windows.yml"
         env:
           GITHUB_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
           GORELEASER_KEY: "${{ secrets.GORELEASER_KEY }}"
